--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Web Id Found</title>
+  <title>IdElectronClient</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,5 +12,5 @@
   <div id="couverture">
     <app-root></app-root>
   </div>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9f773b75ffcda6bb2a95.js"></script><script type="text/javascript" src="scripts.968f55bfb751cd0febb2.js"></script><script type="text/javascript" src="main.155eb8cd5837c1ca0490.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9f773b75ffcda6bb2a95.js"></script><script type="text/javascript" src="scripts.968f55bfb751cd0febb2.js"></script><script type="text/javascript" src="main.1d6614b9884747a95a28.js"></script></body>
 </html>
